syntax = "proto3";
package rawapi;

option go_package = "/pb";

import "nil/services/rpc/rawapi/proto/common.proto";

message BootstrapConfig {
  uint32 nShards = 1;
  string zeroStateConfigYaml = 2;
  repeated string dhtBootstrapPeers = 3;
  repeated string bootstrapPeers = 4;
}

message BootstrapConfigResponse {
  oneof result {
    Error error = 1;
    BootstrapConfig data = 2;
  }
}
